[package]
name = "trace-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.17.0"
ckbfs-types = { version = "0.2.1", default-features = false }
molecule = { version = "0.7.5", default-features = false }
hex = { version = "0.4", default-features = false}

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]